# VaultAI

./: .env  AI_USAGE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.supabase.yml  docker-compose.yml  dump.rdb  env.example  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: dd022028e5bf_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  chat.py  documents.py  health.py  metrics.py
app/models/: __init__.py  chat.py  document.py  metrics.py
app/schemas/: __init__.py  chat.py  document.py  metrics.py
app/services/: __init__.py  ai_service.py  document_processor.py  metrics_service.py  rag_service.py  rate_limiter.py  storage.py  supabase_client.py
app/workers/: __init__.py  celery_app.py  tasks.py
demo/: consistent_hashing.txt  database_scaling.md  design_patterns_principles.md  event_driven_architecture.md  load_balancing_strategies.txt  microservices_architecture.md
frontend/: app.js  index.html  styles.css
scripts/: init_db.py  run_dev.sh  run_worker.sh  supabase_init.sql
storage/: .gitkeep
storage/documents/: .gitkeep
tests/: __init__.py  conftest.py  test_chat.py  test_documents.py  test_health.py  test_services.py
